--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -23,7 +23,7 @@
     --main-color-blue: #349eff;
     --second-color-blue: #62b4ff;
 
-    --main-color-red: #fb0b12;
+    --main-color-red: #9b001c;
     --second-color-red: #ff4a6b;
 
     --main-color-cyan: #10d4d2;
@@ -32,7 +32,7 @@
     --main-color-green: #019707;
     --second-color-green: #4caf50;
 
-    --main-color-orange: #d68102;
+    --main-color-orange: #ff6600;
     --second-color-orange: #fca11a;
 
     --sidebar-width: 300px;
@@ -51,16 +51,19 @@
 body {
     font-family: "vazir", sans-serif;
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
     letter-spacing: 0.7px;
     direction: rtl;
+    text-orientation: upright;
+    unicode-bidi: bidi-override;
 }
 
 a {
     text-decoration: none;
     color: unset;
 }
-
+label{
+    font-family: "vazir", sans-serif;
+}
 a:hover {
     color: var(--main-color);
 }
@@ -96,8 +99,16 @@ input:focus {
     background-color: var(--main-bg);
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
+    transition: all .3s;
 }
+.card-body{
+    width: 100%;
+    height: fit-content;
 
+}
+.card-title{
+    width: 100%;
+}
 .full-height {
     height: 100%;
 }
@@ -153,7 +164,7 @@ input:focus {
     background-color: var(--main-color-orange);
     color: #fff;
 }
-.button_goback{
+.button{
     background-color: var(--main-color);
     color: var(--txt-white) ;
     padding: 9px 15px;
@@ -161,6 +172,22 @@ input:focus {
     border-radius: var(--border-radius);
     animation: show .4s ease-in-out;
     opacity: 1;
+    margin: 3px 5px;
+    transition: all .3s;
+
+}
+.button:hover{
+    cursor: pointer;
+    filter: contrast(1.2);
+    transform: scale(1.03);
+}
+
+
+.bg-sucess{
+    background-color: #00d67a;
+}
+.bg-danger{
+    background-color: #da002f;
 }
 
 .btn_toggle{
@@ -181,9 +208,72 @@ input:focus {
     background-color: #0003 ;
 }
 
+.d-none{
+    display: none;
+}
+.d-flex{
+    display: flex;
+    flex-wrap: wrap;
+}
+.justify-center{
+    justify-content: center;
+}
+.justify-between{
+    justify-content: space-between;
+}
+.justify-around{
+    justify-content: space-around;
+}
 
+.animate{
+    animation: show .4s cubic-bezier(0.455, 0.030, 0.515, 0.955);
+}
+.animate-top{
+    animation: show-top .4s cubic-bezier(0.455, 0.030, 0.515, 0.955);
+}
+.scale-up-center {
+	-webkit-animation: scale-up-center 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite alternate both;
+	        animation: scale-up-center 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite alternate both;
+}
+.form-control{
+    width: 100%;
+    background-color: var(--second-bg);
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 18px;
+    margin-top: 10px;
+    border-color: transparent ;
+    transition: all .3s;
 
-
+}
+.theme-mode-dark .form-control{
+    color: #fff !important;
+}
+.form-control:focus{
+    box-shadow: 0 0 10px -5px var(--main-color);
+}
+.upload_image{
+    display: flex;
+    flex-direction: column-reverse;
+    width: 200px;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+    border: 1px dashed #ccc;
+    padding: 10px;
+    height: fit-content;
+    min-height: 230px;
+}
+.top-sticky{
+    position: sticky;
+position: -webkit-sticky;
+top: 0;
+background: var(--main-bg);
+z-index: 30;
+bottom: 38px;
+padding: 10px;
+border-bottom: 1px solid var(--main-color);
+}
 @keyframes show {
     0%{
         transform: translateX( 10%);
@@ -191,6 +281,17 @@ input:focus {
     }
     100%{
         transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes show-top {
+    0%{
+        transform: translateY( 3%);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0);
         opacity: 1;
     }
 }
