--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -52,4 +52,16 @@
         var(--second-color)
     );
     color: var(--txt-white);
+    animation: bg .3s ease-in-out;
+}
+@keyframes bg {
+    0%{
+        opacity: 0;
+        transform: translate(-7px);
+    }
+    100%{
+        opacity: 1;
+        transform: translate(0px);
+
+    }
 }
