--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -248,23 +248,6 @@ input:focus {
     background-color: var(--main-color-orange);
     color: #fff;
 }
-.button{
-    background-color: var(--main-color);
-    color: var(--txt-white) ;
-    padding: 9px 15px;
-    margin-bottom: 10px;
-    border-radius: var(--border-radius);
-    animation: show .4s ease-in-out;
-    opacity: 1;
-    margin: 3px 5px;
-    transition: all .3s;
-
-}
-.button:hover{
-    cursor: pointer;
-    filter: contrast(1.2);
-    transform: scale(1.03);
-}
 
 
 .bg-sucess{
@@ -307,6 +290,15 @@ input:focus {
 }
 .justify-around{
     justify-content: space-around;
+}
+.align-center{
+    align-items: center;
+}
+.w-100{
+    width: 100%;
+}
+.h-100 {
+    height: 100vh;
 }
 
 .animate{
@@ -358,7 +350,10 @@ bottom: 38px;
 padding: 10px;
 border-bottom: 1px solid var(--main-color);
 }
-
+.container{
+    max-width: 1320px;
+    margin: auto;
+}
 .badge {
     display: inline-block;
     padding: .35em .65em;
@@ -372,6 +367,10 @@ border-bottom: 1px solid var(--main-color);
     border-radius: .25rem;
     background-color: var(--main-color);
 }
+.color-danger{
+    color: #da002f;
+}
+
 .rounded{
     border-radius: 15px;
 }
@@ -383,6 +382,25 @@ border-bottom: 1px solid var(--main-color);
 }
 .p-3{
     padding: .61rem;
+}
+.hidden{
+    display: none;
+}
+.button{
+    background-color: var(--main-color);
+    color: var(--txt-white) ;
+    padding: 9px 15px;
+    margin-bottom: 10px;
+    border-radius: var(--border-radius);
+    opacity: 1;
+    /* margin: 3px 5px; */
+    transition: all .3s;
+
+}
+.button:hover{
+    cursor: pointer;
+    filter: contrast(1.2);
+    transform: scale(1.03);
 }
 
 @keyframes show {
