--- a/src/components/dropdown/dropdown.css
+++ b/src/components/dropdown/dropdown.css
@@ -33,14 +33,14 @@
 .dropdown__content {
     position: absolute;
     top: calc(100% + 5px);
-    right: 0;
+    left: 0;
     width: max-content;
     max-width: 400px;
     background-color: vaR(--main-bg);
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
     overflow: hidden;
-    transform-origin: top right;
+    transform-origin: top left;
     transform: scale(0);
     transition: transform 0.1s ease-in-out 0s;
 }
