--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@import url('https://v1.fontapi.ir/css/Vazir');
-@import url(//db.onlinewebfonts.com/c/766132c828a90cbecf6f7f4027d12725?family=IRAN+Sans);
+@import url(fontiran.css);
 :root {
     --main-bg: #ffffff;
     --second-bg: #fafafb;
@@ -132,12 +130,16 @@
     margin: 0;
     box-sizing: border-box;
     -webkit-tap-highlight-color: transparent;
-}
 
+}
+span, li , p , b, a {
+    font-family: "IRANSans", sans-serif !important;
+
+}
 body {
-    font-family: "vazir", sans-serif;
+    font-family: "IRANSans", sans-serif !important;
     -webkit-font-smoothing: antialiased;
-    letter-spacing: 0.7px;
+    letter-spacing: 0.3px;
     direction: rtl;
     text-orientation: upright;
     unicode-bidi: bidi-override;
@@ -148,7 +150,7 @@ a {
     color: unset;
 }
 label{
-    font-family: "vazir", sans-serif;
+    font-family: "IRANSans", sans-serif;
 }
 a:hover {
     color: var(--main-color);
@@ -166,6 +168,7 @@ ul {
 }
 
 input {
+    font-family: "IRANSans", sans-serif !important;
     border: 2px solid transparent;
     outline: 0;
 }
@@ -180,6 +183,7 @@ input:focus {
 }
 
 .card {
+    font-family: "IRANSans", sans-serif !important;
     padding: 30px;
     margin-bottom: 30px;
     background-color: var(--main-bg);
@@ -193,6 +197,7 @@ input:focus {
 
 }
 .card-title{
+    font-family: "IRANSans", sans-serif !important;
     width: 100%;
 }
 .full-height {
@@ -300,6 +305,15 @@ input:focus {
 .w-100{
     width: 100%;
 }
+.w-75{
+    width: 75%;
+}
+.w-50{
+    width: 49%;
+}
+.w-25{
+    width: 25%;
+}
 .h-100 {
     height: 100vh;
 }
@@ -309,6 +323,9 @@ input:focus {
 }
 .animate-top{
     animation: show-top .4s cubic-bezier(0.455, 0.030, 0.515, 0.955);
+}
+.animate-opacity{
+    animation: opacity .2s cubic-bezier(0.455, 0.030, 0.515, 0.955);
 }
 .scale-up-center {
 	-webkit-animation: scale-up-center 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite alternate both;
@@ -333,10 +350,9 @@ input:focus {
 }
 .upload_image{
     display: flex;
-    flex-direction: column-reverse;
-    width: 200px;
-    justify-content: center;
-    align-items: center;
+    width: 98%;
+    justify-content: space-between;
+    align-items:stretch;
     margin: 20px;
     border: 1px dashed #ccc;
     padding: 10px;
@@ -390,8 +406,10 @@ border-bottom: 1px solid var(--main-color);
     display: none;
 }
 .button{
+    font-family: "IRANSans", sans-serif !important;
+    margin-right: 8px;
     background-color: var(--main-color);
-    color: var(--txt-white) ;
+    color: var(--txt-white);
     padding: 9px 15px;
     margin-bottom: 10px;
     border-radius: var(--border-radius);
@@ -399,6 +417,9 @@ border-bottom: 1px solid var(--main-color);
     /* margin: 3px 5px; */
     transition: all .3s;
 
+}
+.absolute{
+    position: absolute;
 }
 .button:hover{
     cursor: pointer;
@@ -417,6 +438,17 @@ border-bottom: 1px solid var(--main-color);
     }
 }
 
+@keyframes opacity {
+    0%{
+       
+        opacity: 0;
+    }
+    100%{
+       
+        opacity: 1;
+    }
+}
+
 @keyframes show-top {
     0%{
         transform: translateY( 3%);
@@ -426,4 +458,12 @@ border-bottom: 1px solid var(--main-color);
         transform: translateY(0);
         opacity: 1;
     }
+}
+
+#combo-tags:focus{
+    border:0px !important;
+    outline: none !important;
+}
+.MuiAutocomplete-tag {
+    padding-left: 8px !important;
 }
