--- a/src/pages/Auth/form.css
+++ b/src/pages/Auth/form.css
@@ -26,7 +26,7 @@ align-items: center;
     line-height: 0px;
 }
 .bg-image{
-   background-image: url('../../assets/images/slide_2.png');
+   background-image: url('https://ostoore-sport.ir/assets/images/slide_2.png');
     background-size: 80%;
     background-repeat: no-repeat;
 
