--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,5 +1,46 @@
 @import url(fontiran.css);
 :root {
+  --main-bg: #ffffff;
+  --second-bg: #f1f1f1;
+  --txt-color: #455560;
+  --txt-white: #fff;
+  --main-color: #349eff;
+  --second-color: #62b4ff;
+  --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+  --main-bg-light: #ffffff;
+  --second-bg-light: #f5f5f5;
+  --txt-color-light: #455560;
+  --box-shadow-light: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+  --main-bg-dark: #2d2d2d;
+  --second-bg-dark: #202020;
+  --txt-color-dark: #bbbbbb;
+  --box-shadow-dark: rgba(0, 0, 0, 0.2) 0px 5px 10px;
+
+  --main-color-blue: #349eff;
+  --second-color-blue: #62b4ff;
+
+  --main-color-red: #9b001c;
+  --second-color-red: #ff4a6b;
+
+  --main-color-cyan: #10d4d2;
+  --second-color-cyan: #2ae9e6;
+
+  --main-color-green: #019707;
+  --second-color-green: #4caf50;
+
+  --main-color-orange: #ff6600;
+  --second-color-orange: #fca11a;
+
+  --sidebar-width: 300px;
+  --border-radius: 10px;
+  --topnav-height: 110px;
+  --transition-cubic: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+@media only screen and (max-width: 1024px) {
+  :root {
     --main-bg: #ffffff;
     --second-bg: #fafafb;
     --txt-color: #455560;
@@ -9,7 +50,7 @@
     --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
     --main-bg-light: #ffffff;
-    --second-bg-light: #f5f5f5;
+    --second-bg-light: #fafafb;
     --txt-color-light: #455560;
     --box-shadow-light: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
@@ -33,442 +74,396 @@
     --main-color-orange: #ff6600;
     --second-color-orange: #fca11a;
 
-    --sidebar-width: 300px;
+    --sidebar-width: 30%;
     --border-radius: 10px;
     --topnav-height: 110px;
     --transition-cubic: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
 }
 
-@media only screen and (max-width: 1024px){
-    :root {
-        --main-bg: #ffffff;
-        --second-bg: #fafafb;
-        --txt-color: #455560;
-        --txt-white: #fff;
-        --main-color: #349eff;
-        --second-color: #62b4ff;
-        --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    
-        --main-bg-light: #ffffff;
-        --second-bg-light: #fafafb;
-        --txt-color-light: #455560;
-        --box-shadow-light: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    
-        --main-bg-dark: #2d2d2d;
-        --second-bg-dark: #202020;
-        --txt-color-dark: #bbbbbb;
-        --box-shadow-dark: rgba(0, 0, 0, 0.2) 0px 5px 10px;
-    
-        --main-color-blue: #349eff;
-        --second-color-blue: #62b4ff;
-    
-        --main-color-red: #9b001c;
-        --second-color-red: #ff4a6b;
-    
-        --main-color-cyan: #10d4d2;
-        --second-color-cyan: #2ae9e6;
-    
-        --main-color-green: #019707;
-        --second-color-green: #4caf50;
-    
-        --main-color-orange: #ff6600;
-        --second-color-orange: #fca11a;
-    
-        --sidebar-width: 30%;
-        --border-radius: 10px;
-        --topnav-height: 110px;
-        --transition-cubic: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    } 
-}
+@media only screen and (max-width: 700px) {
+  :root {
+    --main-bg: #ffffff;
+    --second-bg: #f1f1f1;
+    --txt-color: #455560;
+    --txt-white: #fff;
+    --main-color: #349eff;
+    --second-color: #62b4ff;
+    --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
+    --main-bg-light: #ffffff;
+    --second-bg-light: #fafafb;
+    --txt-color-light: #455560;
+    --box-shadow-light: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
-@media only screen and (max-width: 700px){
-    :root {
-        --main-bg: #ffffff;
-        --second-bg: #f1f1f1;
-        --txt-color: #455560;
-        --txt-white: #fff;
-        --main-color: #349eff;
-        --second-color: #62b4ff;
-        --box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    
-        --main-bg-light: #ffffff;
-        --second-bg-light: #fafafb;
-        --txt-color-light: #455560;
-        --box-shadow-light: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    
-        --main-bg-dark: #2d2d2d;
-        --second-bg-dark: #202020;
-        --txt-color-dark: #bbbbbb;
-        --box-shadow-dark: rgba(0, 0, 0, 0.2) 0px 5px 10px;
-    
-        --main-color-blue: #349eff;
-        --second-color-blue: #62b4ff;
-    
-        --main-color-red: #9b001c;
-        --second-color-red: #ff4a6b;
-    
-        --main-color-cyan: #10d4d2;
-        --second-color-cyan: #2ae9e6;
-    
-        --main-color-green: #019707;
-        --second-color-green: #4caf50;
-    
-        --main-color-orange: #ff6600;
-        --second-color-orange: #fca11a;
-    
-        --sidebar-width: 0%;
-        --sidebar-width-open: 60%;
-        --border-radius: 10px;
-        --topnav-height: 110px;
-        --transition-cubic: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    } 
+    --main-bg-dark: #2d2d2d;
+    --second-bg-dark: #202020;
+    --txt-color-dark: #bbbbbb;
+    --box-shadow-dark: rgba(0, 0, 0, 0.2) 0px 5px 10px;
+
+    --main-color-blue: #349eff;
+    --second-color-blue: #62b4ff;
+
+    --main-color-red: #9b001c;
+    --second-color-red: #ff4a6b;
+
+    --main-color-cyan: #10d4d2;
+    --second-color-cyan: #2ae9e6;
+
+    --main-color-green: #019707;
+    --second-color-green: #4caf50;
+
+    --main-color-orange: #ff6600;
+    --second-color-orange: #fca11a;
+
+    --sidebar-width: 0%;
+    --sidebar-width-open: 60%;
+    --border-radius: 10px;
+    --topnav-height: 110px;
+    --transition-cubic: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
 }
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    -webkit-tap-highlight-color: transparent;
-
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
-span, li , p , b, a {
-    font-family: "IRANSans", sans-serif !important;
-
+span,
+li,
+p,
+b,
+a {
+  font-family: "IRANSans", sans-serif !important;
 }
 body {
-    font-family: "IRANSans", sans-serif !important;
-    -webkit-font-smoothing: antialiased;
-    letter-spacing: 0.3px;
-    direction: rtl;
-    text-orientation: upright;
-    unicode-bidi: bidi-override;
+  font-family: "IRANSans", sans-serif !important;
+  -webkit-font-smoothing: antialiased;
+  letter-spacing: 0.3px;
+  direction: rtl;
+  text-orientation: upright;
+  unicode-bidi: bidi-override;
 }
 
 a {
-    text-decoration: none;
-    color: unset;
+  text-decoration: none;
+  color: unset;
 }
-label{
-    font-family: "IRANSans", sans-serif;
+label {
+  font-family: "IRANSans", sans-serif;
 }
 a:hover {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 button {
-    cursor: pointer;
-    border: 0;
-    outline: 0;
-    color: var(--txt-color);
+  cursor: pointer;
+  border: 0;
+  outline: 0;
+  color: var(--txt-color);
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 input {
-    font-family: "IRANSans", sans-serif !important;
-    border: 2px solid transparent;
-    outline: 0;
+  font-family: "IRANSans", sans-serif !important;
+  border: 2px solid transparent;
+  outline: 0;
 }
 
-.disable{
-    pointer-events: none;
-    background-color: #616161 !important;
+.disable {
+  pointer-events: none;
+  background-color: #616161 !important;
 }
 
 input:focus {
-    border: 2px solid var(--main-color);
+  border: 2px solid var(--main-color);
 }
 
 .page-header {
-    margin-bottom: 40px;
-    text-transform: capitalize;
+  margin-bottom: 40px;
+  text-transform: capitalize;
 }
 
 .card {
-    font-family: "IRANSans", sans-serif !important;
-    padding: 30px;
-    margin-bottom: 30px;
-    background-color: var(--main-bg);
-    box-shadow: var(--box-shadow);
-    border-radius: var(--border-radius);
-    transition: all .3s;
+  font-family: "IRANSans", sans-serif !important;
+  padding: 30px;
+  margin-bottom: 30px;
+  background-color: var(--main-bg);
+  box-shadow: var(--box-shadow);
+  border-radius: var(--border-radius);
+  transition: all 0.3s;
 }
-.card-body{
-    width: 100%;
-    height: fit-content;
-
+.card-body {
+  width: 100%;
+  height: fit-content;
 }
-.card-title{
-    font-family: "IRANSans", sans-serif !important;
-    width: 100%;
+.card-title {
+  font-family: "IRANSans", sans-serif !important;
+  width: 100%;
 }
 .full-height {
-    height: 100%;
+  height: 100%;
 }
 
 .card.full-height {
-    height: calc(100% - 30px);
+  height: calc(100% - 30px);
 }
 
 .card__header {
-    text-transform: capitalize;
+  text-transform: capitalize;
 }
 
-
-
 .card__footer {
-    text-align: center;
-    text-transform: capitalize;
+  text-align: center;
+  text-transform: capitalize;
 }
 
 .light-background {
-    background-color: var(--main-bg-light);
-    color: #000;
+  background-color: var(--main-bg-light);
+  color: #000;
 }
 
 .dark-background {
-    background-color: var(--main-bg-dark);
-    color: #fff;
+  background-color: var(--main-bg-dark);
+  color: #fff;
 }
 
 .blue-color {
-    background-color: var(--main-color-blue);
-    color: #fff;
+  background-color: var(--main-color-blue);
+  color: #fff;
 }
 
 .red-color {
-    background-color: var(--main-color-red);
-    color: #fff;
+  background-color: var(--main-color-red);
+  color: #fff;
 }
 
 .cyan-color {
-    background-color: var(--main-color-cyan);
-    color: #fff;
+  background-color: var(--main-color-cyan);
+  color: #fff;
 }
 
 .green-color {
-    background-color: var(--main-color-green);
-    color: #fff;
+  background-color: var(--main-color-green);
+  color: #fff;
 }
 
 .orange-color {
-    background-color: var(--main-color-orange);
-    color: #fff;
+  background-color: var(--main-color-orange);
+  color: #fff;
 }
 
-
-.bg-sucess{
-    background-color: #00d67a;
+.bg-sucess {
+  background-color: #00d67a;
 }
-.bg-danger{
-    background-color: #da002f;
-}
-
-.btn_toggle{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.btn_toggle a i{
-   margin-bottom: -10px;
-}
-.btn_toggle a{
-    padding: 4px 4px;
-    transition: .3s ;
-    border-radius: 10px;
-}
-.btn_toggle a:hover{
-    color: var(--txt-white);
-    background-color: #0003 ;
+.bg-danger {
+  background-color: #da002f;
 }
 
-.d-none{
-    display: none;
+.btn_toggle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.d-flex{
-    display: flex;
-    flex-wrap: wrap;
+.btn_toggle a i {
+  margin-bottom: -10px;
 }
-.justify-center{
-    justify-content: center;
+.btn_toggle a {
+  padding: 4px 4px;
+  transition: 0.3s;
+  border-radius: 10px;
 }
-.justify-between{
-    justify-content: space-between;
+.btn_toggle a:hover {
+  color: var(--txt-white);
+  background-color: #0003;
 }
-.justify-around{
-    justify-content: space-around;
+
+.d-none {
+  display: none;
 }
-.align-center{
-    align-items: center;
+.d-flex {
+  display: flex;
+  flex-wrap: wrap;
 }
-.flex-col{
-    flex-direction: column;
+.justify-center {
+  justify-content: center;
 }
-.w-100{
-    width: 100%;
+.justify-between {
+  justify-content: space-between;
 }
-.w-75{
-    width: 75%;
+.justify-around {
+  justify-content: space-around;
 }
-.w-50{
-    width: 49%;
+.align-center {
+  align-items: center;
 }
-.w-25{
-    width: 25%;
+.flex-col {
+  flex-direction: column;
+}
+.w-100 {
+  width: 100%;
+}
+.w-75 {
+  width: 75%;
+}
+.w-50 {
+  width: 49%;
+}
+.w-25 {
+  width: 25%;
 }
 .h-100 {
-    height: 100vh;
+  height: 100vh;
 }
 
-.animate{
-    animation: show .4s cubic-bezier(0.455, 0.030, 0.515, 0.955);
+.animate {
+  animation: show 0.4s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
-.animate-top{
-    animation: show-top .4s cubic-bezier(0.455, 0.030, 0.515, 0.955);
+.animate-top {
+  animation: show-top 0.4s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
-.animate-opacity{
-    animation: opacity .2s cubic-bezier(0.455, 0.030, 0.515, 0.955);
+.animate-opacity {
+  animation: opacity 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 .scale-up-center {
-	-webkit-animation: scale-up-center 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite alternate both;
-	        animation: scale-up-center 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) infinite alternate both;
+  -webkit-animation: scale-up-center 0.4s
+    cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite alternate both;
+  animation: scale-up-center 0.4s cubic-bezier(0.455, 0.03, 0.515, 0.955)
+    infinite alternate both;
 }
-.form-control{
-    width: 100%;
-    background-color: var(--second-bg);
-    padding: 10px;
-    border-radius: 10px;
-    font-size: 18px;
-    margin-top: 10px;
-    border-color: transparent ;
-    transition: all .3s;
-
+.form-control {
+  width: 100%;
+  background-color: var(--second-bg);
+  padding: 10px;
+  border-radius: 10px;
+  font-size: 18px;
+  margin-top: 10px;
+  border-color: transparent;
+  transition: all 0.3s;
 }
-.theme-mode-dark .form-control{
-    color: #fff !important;
+.theme-mode-dark .form-control {
+  color: #fff !important;
 }
-.form-control:focus{
-    box-shadow: 0 0 10px -5px var(--main-color);
+.form-control:focus {
+  box-shadow: 0 0 10px -5px var(--main-color);
 }
-.upload_image{
-    display: flex;
-    width: 98%;
-    justify-content: space-between;
-    align-items:stretch;
-    margin: 20px;
-    border: 1px dashed #ccc;
-    padding: 10px;
-    height: fit-content;
-    min-height: 230px;
+.upload_image {
+  display: flex;
+  width: 98%;
+  justify-content: space-between;
+  align-items: stretch;
+  margin: 20px;
+  border: 1px dashed #ccc;
+  padding: 10px;
+  height: fit-content;
+  min-height: 230px;
 }
-.top-sticky{
-    position: sticky;
-position: -webkit-sticky;
-top: 0;
-background: var(--main-bg);
-z-index: 30;
-bottom: 38px;
-padding: 10px;
-border-bottom: 1px solid var(--main-color);
+.top-sticky {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  background: var(--main-bg);
+  z-index: 30;
+  bottom: 38px;
+  padding: 10px;
+  border-bottom: 1px solid var(--main-color);
 }
-.container{
-    max-width: 1320px;
-    margin: auto;
+.container {
+  max-width: 1320px;
+  margin: auto;
 }
 .badge {
-    display: inline-block;
-    padding: .35em .65em;
-    font-size: .75em;
-    font-weight: 700;
-    line-height: 1;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: baseline;
-    border-radius: .25rem;
-    background-color: var(--main-color);
+  display: inline-block;
+  padding: 0.35em 0.65em;
+  font-size: 0.75em;
+  font-weight: 700;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 0.25rem;
+  background-color: var(--main-color);
 }
-.color-danger{
-    color: #da002f;
+.color-danger {
+  color: #da002f;
 }
 
-.rounded{
-    border-radius: 15px;
+.rounded {
+  border-radius: 15px;
 }
-.rouded-circle{
-    border-radius: 100%;
+.rouded-circle {
+  border-radius: 100%;
 }
-.border{
-    border: 1px solid #ccc;
+.border {
+  border: 1px solid #ccc;
 }
-.p-3{
-    padding: .61rem;
+.p-3 {
+  padding: 0.61rem;
 }
-.hidden{
-    display: none;
+.hidden {
+  display: none;
 }
-.button{
-    font-family: "IRANSans", sans-serif !important;
-    margin-right: 8px;
-    background-color: var(--main-color);
-    color: var(--txt-white);
-    padding: 9px 15px;
-    margin-bottom: 10px;
-    border-radius: var(--border-radius);
-    opacity: 1;
-    /* margin: 3px 5px; */
-    transition: all .3s;
-
+.button {
+  font-family: "IRANSans", sans-serif !important;
+  margin-right: 8px;
+  background-color: var(--main-color);
+  color: var(--txt-white);
+  padding: 9px 15px;
+  margin-bottom: 10px;
+  border-radius: var(--border-radius);
+  opacity: 1;
+  /* margin: 3px 5px; */
+  transition: all 0.3s;
 }
-.absolute{
-    position: absolute;
+.absolute {
+  position: absolute;
 }
-.button:hover{
-    cursor: pointer;
-    filter: contrast(1.2);
-    transform: scale(1.03);
+.button:hover {
+  cursor: pointer;
+  filter: contrast(1.2);
+  transform: scale(1.03);
 }
 
 @keyframes show {
-    0%{
-        transform: translateX( 10%);
-        opacity: 0;
-    }
-    100%{
-        transform: translateX(0);
-        opacity: 1;
-    }
+  0% {
+    transform: translateX(10%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 @keyframes opacity {
-    0%{
-       
-        opacity: 0;
-    }
-    100%{
-       
-        opacity: 1;
-    }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes show-top {
-    0%{
-        transform: translateY( 3%);
-        opacity: 0;
-    }
-    100%{
-        transform: translateY(0);
-        opacity: 1;
-    }
+  0% {
+    transform: translateY(3%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
-#combo-tags:focus{
-    border:0px !important;
-    outline: none !important;
+#combo-tags:focus {
+  border: 0px !important;
+  outline: none !important;
 }
 .MuiAutocomplete-tag {
-    padding-left: 8px !important;
+  padding-left: 8px !important;
 }
