[update] change update  in product and gallery

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -467,3 +467,12 @@ input:focus {
 .MuiAutocomplete-tag {
   padding-left: 8px !important;
 }
+
+
+
+/* ck editor Style */
+
+.ck {
+  direction: rtl !important;
+
+}
