[UPDATE] : fixd bug

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -472,7 +472,8 @@ input:focus {
 
 /* ck editor Style */
 
-.ck {
+.ck-rounded-corners .ck.ck-editor__main>.ck-editor__editable, .ck.ck-editor__main>.ck-editor__editable.ck-rounded-corners {
+  text-align: right !important;
   direction: rtl !important;
 
 }
