--- a/src/pages/Product/Product.css
+++ b/src/pages/Product/Product.css
@@ -1,7 +1,13 @@
 .Mui-selected{
  color: var(--main-color) !important;
 }
-*MuiTabs-indicator{
-    color: var(--main-color) !important;
-
+.pending::after{
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    right: 0;
+    top: 0;
+    background-color: #ccc4;
+    z-index: 10;
 }
